Fix horizontal scroll on Safari

--- a/stylesheets/scss/_mobile.scss
+++ b/stylesheets/scss/_mobile.scss
@@ -685,7 +685,6 @@
     }
 
     .section-get {
-      overflow: hidden;
 
       .vertical-center {
         padding-top: 0;
