--- a/stylesheets/scss/pages/_join_leo.scss
+++ b/stylesheets/scss/pages/_join_leo.scss
@@ -19,6 +19,7 @@
   }
 
   .section-get {
+    overflow: hidden;
 
     .content-column:first-child {
       text-align: left;
